syntax = "proto3";
import "Status.proto";
import "household.proto";

option csharp_namespace = "phoenix";
option go_package = "./models";

package phoenix;

message IsPermittedPermissionRequest {
  int32 groupId = 1;
  int64 userId = 2;
  RolePermissions role = 3;
}

message AllowActionInSuspendedDomainRequest{
  int32 groupId = 1;
  int64 userId = 2;
}

message GetSuspensionStatusRequest {
  int32 groupId = 1;
  int64 domainId = 2;
}

message GetSuspensionStatusResponse {
  Status Status = 1;
}

message GetDomainDataRequest {
  int32 groupId = 1;
  int64 domainId = 2;
}

message GetDomainDataResponse {
  int32 dlmId = 1;
  int32 domainConcurrency = 2;
  repeated deviceFamily deviceFamilies = 3;
  int64 domainId = 4;
}

message ValidateUserRequest{
  int32 groupId = 1;
  int64 userId = 2;
}

message ValidateUserResponse{
  Status status = 1;
  int64 domainId = 2;
  map<string, string> dynamicData = 3;
}

message GetMediaConcurrencyRulesByDomainLimitationModuleRequest {
  int32 GroupId = 1;
  int32 dlmId = 2;
}
message GetMediaConcurrencyRulesByDomainLimitationModuleResponse {
  repeated int32 ids = 1;
}

message IsDevicePlayValidRequest{
  int32 groupId = 1;
  int64 userId = 2;
  string Udid = 3;
}

message IsValidDeviceFamilyRequest{
  int32 groupId = 1;
  string udid = 2;
  repeated int32 deviceFamilyIds = 3;
}